# Ghost-Engineer

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
agent/: Dockerfile  main.py
backend/: .gitignore  Dockerfile  config.py  database.py  main.py  pubsub.py  test_google_auth.py
backend/modules/: developer_profiler.py  ghost_actions.py  ghost_brain.py  gitlab_reader.py  orchestrator.py  pattern_detector.py  proactive_ghost.py
backend/webhooks/: models.py  processors.py  router.py
scripts/: seed_demo_repo.py
tests/: conftest.py  test_gitlab_webhook.py  test_health.py  test_pattern_detector.py
