[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ghost-engineer"
version = "0.1.0"
description = "Ghost Engineer - AI-powered engineering assistant"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pymongo>=4.7.0",
    "python-gitlab>=4.6.0",
    "google-cloud-aiplatform>=1.52.0",
    "google-cloud-pubsub>=2.21.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "motor>=3.4.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["backend", "agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
